kodilla-docker-course/store-app/k&s/db-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db-mysql
  template:
    metadata:
      labels:
        component: db-mysql
    spec:
      containers:
        - name: db-mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-mysql-storage
              mountPath: /data/db
      volumes:
        - name: db-mysql-storage
          persistentVolumeClaim:
            claimName: db-mysql-pvc
