kodilla-docker-course/store-app/k&s/notifications-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: notifications-api
  template:
    metadata:
      labels:
        component: notifications-api
    spec:
      containers:
        - name: notifications-api-app
          image: maciejk100/notifications-api:1.0.5
          ports:
            - containerPort: 5001
