kodilla-docker-course/store-app/k&s/products-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: products-api
  template:
    metadata:
      labels:
        component: products-api
    spec:
      containers:
        - name: products-api-app
          image: maciejk100/products-api:1.0.5
          ports:
            - containerPort: 8080
