kodilla-docker-course/store-app/k&s/db-mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mysql-cluster-ip-service
spec:
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    component: db-mysql
