kodilla-docker-course/store-app/k&s/notifications-api-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-api-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    component: notifications-api
